--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=9000
 server.context-path=/
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/oauth
+spring.datasource.username=oauth
+spring.datasource.password=oauth
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+database.reset=true
