--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.username=oauth
 spring.datasource.password=oauth
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+
 database.reset=true
